opam-version: "2.0"
maintainer: "anil@recoil.org"
synopsis: "OCaml runtime compiled for the MirageOS Xen backend"
authors: "The MirageOS team"
tags: "org:mirage"
homepage: "https://github.com/mirage/mirage-platform"
bug-reports: "https://github.com/mirage/mirage-platform/issues/"
depends: [
  "ocaml" {>= "4.04.2" & < "4.12.0"}
  "mirage-xen-posix" {>= "2.6.0"}
  "conf-pkg-config"
  "ocamlfind" {build}
  "ocaml-src"
]
substs: [
  "xen-ocaml/flags/cflags.tmp"
  "xen-ocaml/flags/libs.tmp"
  ]
available: os = "linux"
build: [make "xen-ocaml-build" "PREFIX=%{prefix}%"]
install: [make "xen-ocaml-install" "PREFIX=%{prefix}%"]
remove: [make "xen-ocaml-uninstall" "PREFIX=%{prefix}%"]
dev-repo: "git+https://github.com/mirage/mirage-platform.git"
